// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a single image properly 1`] = `
<div
  className="file__ImageCollectionContainer-m7kgaz-0 kNSJUV"
>
  <div
    className="sc-htpNat imiCrX"
    width={undefined}
  >
    <div
      className="display-artwork"
    >
      <a
        className="file__ArtworkImageLink-fr51no-0 deCDpy"
        href="/artwork/fernando-botero-nude-on-the-beach"
      >
        <img
          alt="Nude on the Beach"
          className="display-artwork__image file__BlockImage-fr51no-1 FxzYf"
          height="auto"
          src="https://d32dm0rphc51dk.cloudfront.net/0aRUvnVgQKbQk5dj8xcCAg/larger.jpg"
          width="100%"
        />
      </a>
      <div
        className="display-artwork__caption sc-bdVaJa bLvhbP"
      >
        <div
          className="file__TruncatedLine-n4uxzp-0 iAlzUN"
        >
          <span
            className="artist-name"
          >
            <span
              className="name"
            >
              <a
                className="file__StyledTextLink-s18afosz-0 hOUyga"
                href="/artist/fernando-botero"
              >
                Fernando Botero
              </a>
            </span>
          </span>
          <span
            className="title"
          >
            <a
              className="file__StyledTextLink-s18afosz-0 hOUyga"
              href="/artwork/fernando-botero-nude-on-the-beach"
            >
              Nude on the Beach
            </a>
          </span>
          <span
            className="comma"
          >
            , 
          </span>
          <span
            className="date"
          >
            2000
          </span>
          <span
            className="comma"
          >
            , 
          </span>
          <a
            className="file__StyledTextLink-s18afosz-0 hOUyga"
            href="/partner/gary-nader"
          >
            Gary Nader
          </a>
        </div>
        <div
          className="file__ViewFullscreenLink-s8d1ii9-0 jOPcML"
        >
          View Fullscreen
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders properly 1`] = `
<div
  className="file__ImageCollectionContainer-m7kgaz-0 kNSJUV"
>
  <div
    className="sc-htpNat bNZiJe"
    width={312}
  >
    <div
      className="display-artwork"
    >
      <a
        className="file__ArtworkImageLink-fr51no-0 deCDpy"
        href="/artwork/fernando-botero-nude-on-the-beach"
      >
        <img
          alt="Nude on the Beach"
          className="display-artwork__image file__BlockImage-fr51no-1 FxzYf"
          height={224}
          src="https://d32dm0rphc51dk.cloudfront.net/0aRUvnVgQKbQk5dj8xcCAg/larger.jpg"
          width={312}
        />
      </a>
      <div
        className="display-artwork__caption sc-bdVaJa bLvhbP"
      >
        <div
          className="file__TruncatedLine-n4uxzp-0 iAlzUN"
        >
          <span
            className="artist-name"
          >
            <span
              className="name"
            >
              <a
                className="file__StyledTextLink-s18afosz-0 hOUyga"
                href="/artist/fernando-botero"
              >
                Fernando Botero
              </a>
            </span>
          </span>
          <span
            className="title"
          >
            <a
              className="file__StyledTextLink-s18afosz-0 hOUyga"
              href="/artwork/fernando-botero-nude-on-the-beach"
            >
              Nude on the Beach
            </a>
          </span>
          <span
            className="comma"
          >
            , 
          </span>
          <span
            className="date"
          >
            2000
          </span>
          <span
            className="comma"
          >
            , 
          </span>
          <a
            className="file__StyledTextLink-s18afosz-0 hOUyga"
            href="/partner/gary-nader"
          >
            Gary Nader
          </a>
        </div>
        <div
          className="file__ViewFullscreenLink-s8d1ii9-0 jOPcML"
        >
          View Fullscreen
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-htpNat gxITxF"
    width={168}
  >
    <div
      className="article-image"
    >
      <img
        alt="Photo by Adam Kuehl for Artsy."
        className="file__BlockImage-s1ea5qrr-0 kDXyfC"
        height={224}
        src="https://artsy-media-uploads.s3.amazonaws.com/co8j2xq40ROMyBrJQm_4eQ%2FDafenOilPaintingVillage_AK03.jpg"
        width={168}
      />
      <div
        className="file__CaptionContainer-s12l14z-0 ijlQJa"
      >
        <div
          className="sc-bwzfXH gpZhql"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Photo by Adam Kuehl for Artsy.</p>",
              }
            }
          />
        </div>
        <div
          className="file__ViewFullscreenLink-s8d1ii9-0 jOPcML"
        >
          View Fullscreen
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-htpNat egfBBj"
    width={178}
  >
    <div
      className="article-image"
    >
      <img
        alt="Photo by Adam Kuehl for Artsy. Image courtesy of the Guggenheim Museum."
        className="file__BlockImage-s1ea5qrr-0 kDXyfC"
        height={224}
        src="https://d32dm0rphc51dk.cloudfront.net/CpHY-DRr7KW0HGXLslCXHw/larger.jpg"
        width={178}
      />
      <div
        className="file__CaptionContainer-s12l14z-0 ijlQJa"
      >
        <div
          className="sc-bwzfXH gpZhql"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Photo by Adam Kuehl for Artsy. Image courtesy of the Guggenheim Museum.</p>",
              }
            }
          />
        </div>
        <div
          className="file__ViewFullscreenLink-s8d1ii9-0 jOPcML"
        >
          View Fullscreen
        </div>
      </div>
    </div>
  </div>
</div>
`;
